# test-assessment-the-spy-cat-agency

./: .gitignore  README.md  alembic.ini  pyproject.toml  ruff.toml  spy_cats.json  spy_cats_api.postman_collection.json
migrations/: env.py
migrations/versions/: e887fa51ea1f_initial_migration.py
src/: main.py  router.py  settings.py  structures.py
src/dependencies/: db.py  http.py  pagination.py
src/errors/: cats.py  missions.py  targets.py
src/models/: __init__.py  cats.py  missions.py  targets.py
src/repositories/: base.py  cats.py  missions.py  targets.py
src/repositories/rest_api/: breads_api.py  structures.py
src/repositories/sql_repos/: cats.py  missions.py  targets.py
src/routers/: cats.py  missions.py  targets.py
src/schemas/: base.py  cats.py  missions.py  targets.py
src/services/: cats.py  missions.py  targets.py
src/utils/: pagination.py
